--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -1,45 +1,49 @@
 name: Tests Workflow
 
+
 on:
-	push:
-		branches:
-			- master
-			- release
-	pull_request:
-		branches:
-			- master
-			- release
-			- develop
+  push:
+    branches:
+      - master
+      - release
+  pull_request:
+    branches:
+      - master
+      - release
+      - develop
+
 
 jobs:
-	test:
- 		runs-on: ubuntu-latest
-		env:
-			FULL_NAME: Дроздова Алина Александровна
-			GROUP_NUMBER: M3115
-		steps:
-			# Клонирование репозитория
-			- name: Checkout repository
-			  uses: actions/checkout@v3
+  test:
+    runs-on: ubuntu-latest
+    env:
+      FULL_NAME: Дроздова Алина Александровна
+      GROUP_NUMBER: M3115
+    steps:
+      # Клонирование репозитория
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-			# Информация о пользователе
-			- name: Print information 
-			  run: |
-				echo "ФИО: ${{ env.FULL_NAME }}"
-				echo "Номер группы: ${{ env.GROUP_NUMBER }}"
-				echo "Ник GitHub: ${{ github.actor }}"
-			# Установка python
-			- name: Set up Python 3.13
-			  uses: actions/setup-python@v4
-		 	  with:
-				python-version: 3.13
+      # Информация о пользователе
+      - name: Print information 
+        run: |
+          echo "ФИО: ${{ env.FULL_NAME }}"
+          echo "Номер группы: ${{ env.GROUP_NUMBER }}"
+          echo "Ник GitHub: ${{ github.actor }}"
+			
+      # Установка python
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
 
-			# Сами unit-tests:
-			- name Run unit-tests
-			  run: |
-				python -m unittest discover -s Tests
+      # Сами unit-tests:
+      - name Run unit-tests
+        run: |
+          python -m unittest discover -s Tests
 
-			# Проверка кода на соответствие стиля flake8
-			- name: Lint code with flake8
-			  run: |
-				pip install flake8
+      # Проверка кода на соответствие стиля flake8
+      - name: Lint code with flake8
+        run: |
+          pip install flake8
+          flake8 .
