--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -38,7 +38,7 @@ jobs:
           python-version: 3.13
 
       # Сами unit-tests:
-      - name Run unit-tests
+      - name: Run unit-tests
         run: |
           python -m unittest discover -s Tests
 
